<resources>
    <string name="app_name">calc</string>
    <string name="basic">basic</string>
    <string name="advanced">advanced</string>
    <string name="open_bracket">(</string>
    <string name="close_bracket">)</string>
    <string name="clear">C</string>
    <string name="divide">/</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiply">*</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="equals">=</string>
    <string name="all_clear">ac</string>
    <string name="sinus">sin</string>
    <string name="cosinus">cos</string>
    <string name="tangens">tan</string>
    <string name="natural_log">ln</string>
    <string name="power_of_two">^2</string>
    <string name="square_root">^(1/2)</string>
    <string name="power">^</string>
    <string name="logarithm">log</string>
    <string name="euler_number">e</string>
    <string name="pi">pi</string>
</resources>